--- a/public/documentation.html
+++ b/public/documentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,32 @@
   </header>
 
   <main>
-    <p>This is an API that contains a list of movies.</p>
+    <p>This is an API that contains a list of movies as well as their directors, lead roles, generes and coverart.</p>
+    <div class="api_list_table">
+      <!-- List of request methods used. -->
+      <ul>
+        <li>GET</li>
+        <li>POST</li>
+        <li>PUT</li>
+        <li>DELETE</li>
+      </ul>
+      <!-- List of URL endpoints used -->
+      <ul>
+        <li>/movies</li>
+        <li>/movies/director</li>
+        <li>/movies/genres</li>
+        <li>/users</li>
+        <li>/users/username</li>
+      </ul>
+      <!-- List of reponses used -->
+      <ul>
+        <li>Successful GET request</li>
+        <li>Successful POST request</li>
+        <li>Sucessful PUT request</li>
+        <li>Successful DELETE request.</li>
+      </ul>
+    </div>
+
   </main>
 
 </body>
