--- a/public/documentation.html
+++ b/public/documentation.html
@@ -21,14 +21,18 @@
         <li>POST</li>
         <li>PUT</li>
         <li>DELETE</li>
+
       </ul>
       <!-- List of URL endpoints used -->
       <ul>
         <li>/movies</li>
         <li>/movies/director</li>
         <li>/movies/genres</li>
+        <li>/movies/coverart</li>
         <li>/users</li>
         <li>/users/username</li>
+        <li>/users/username/email</li>
+        <li>/users/username/favoritesList</li>
       </ul>
       <!-- List of reponses used -->
       <ul>
